--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         }
 
         .dedication-banner {
-            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('http://API-Quran.com');
             background-color: var(--primary-color);
             text-align: center;
             padding: 40px 20px;
@@ -65,8 +64,23 @@
             border-right: 4px solid var(--gold-color); line-height: 1.7;
             font-size: 0.95rem;
             transition: 0.3s;
+            position: relative;
         }
         .duaa-card:hover { transform: translateY(-3px); background: #233625; }
+
+        /* ستايل الأذكار */
+        .azkar-sub-tabs { display: flex; justify-content: center; gap: 10px; margin-bottom: 20px; }
+        .sub-tab-btn {
+            background: transparent; border: 1px solid var(--gold-color); color: var(--gold-color);
+            padding: 5px 15px; border-radius: 15px; cursor: pointer; font-size: 0.85rem;
+        }
+        .sub-tab-btn.active { background: var(--gold-color); color: var(--dark-bg); }
+        .azkar-content { display: none; }
+        .azkar-content.active { display: grid; }
+        .count-badge {
+            background: var(--gold-color); color: #000; padding: 2px 8px;
+            border-radius: 10px; font-size: 0.75rem; font-weight: bold; margin-right: 5px;
+        }
 
         .sebha-box {
             text-align: center; background: var(--card-bg);
@@ -117,6 +131,7 @@
         <div class="tabs">
             <button class="tab-btn active" onclick="switchTab(event, 'radioSection')">الإذاعة</button>
             <button class="tab-btn" onclick="switchTab(event, 'quranSection')">المصحف المكتوب</button>
+            <button class="tab-btn" onclick="switchTab(event, 'azkarSection')">أذكار الصباح والمساء</button>
             <button class="tab-btn" onclick="switchTab(event, 'duaaSection')">أدعية للمتوفى</button>
             <button class="tab-btn" onclick="switchTab(event, 'sebhaSection')">السبحة</button>
         </div>
@@ -135,6 +150,39 @@
             </div>
         </div>
 
+        <div id="azkarSection" class="content-section">
+            <div class="azkar-sub-tabs">
+                <button class="sub-tab-btn active" onclick="switchAzkar(event, 'morningAzkar')">أذكار الصباح</button>
+                <button class="sub-tab-btn" onclick="switchAzkar(event, 'eveningAzkar')">أذكار المساء</button>
+            </div>
+
+            <div id="morningAzkar" class="azkar-content active duaa-grid">
+                <div class="duaa-card" style="border-right-color:#fff;"><b>آية الكرسي</b> <span class="count-badge">مرة واحدة</span><br>أَعُوذُ بِاللهِ مِنَ الشَّيْطَانِ الرَّجِيمِ: "اللَّهُ لَا إِلَهَ إِلَّا هُوَ الْحَيُّ الْقَيُّومُ..."</div>
+                <div class="duaa-card" style="border-right-color:#fff;"><b>المعوذات</b> <span class="count-badge">3 مرات</span><br>سورة الإخلاص، الفلق، والناس.</div>
+                <div class="duaa-card">أصبحنا وأصبح الملك لله، والحمد لله، لا إله إلا الله وحده لا شريك له.</div>
+                <div class="duaa-card">اللهم بك أصبحنا، وبك أمسينا، وبك نحيا، وبك نموت، وإليك النشور.</div>
+                <div class="duaa-card"><b>سيد الاستغفار:</b> اللهم أنت ربي لا إله إلا أنت، خلقتني وأنا عبدك، وأنا على عهدك ووعدك ما استطعت.</div>
+                <div class="duaa-card"><span class="count-badge">4 مرات</span> اللهم إني أصبحت أشهدك وأشهد حملة عرشك، وملائكتك وجميع خلقك، أنك أنت الله لا إله إلا أنت.</div>
+                <div class="duaa-card"><span class="count-badge">7 مرات</span> حسبي الله لا إله إلا هو عليه توكلت وهو رب العرش العظيم.</div>
+                <div class="duaa-card"><span class="count-badge">3 مرات</span> بسم الله الذي لا يضر مع اسمه شيء في الأرض ولا في السماء وهو السميع العليم.</div>
+                <div class="duaa-card"><span class="count-badge">3 مرات</span> رضيت بالله رباً، وبالإسلام ديناً، وبمحمد صلى الله عليه وسلم نبياً.</div>
+                <div class="duaa-card">يا حي يا قيوم برحمتك أستغيث أصلح لي شأني كله ولا تكلني إلى نفسي طرفة عين.</div>
+                <div class="duaa-card"><span class="count-badge">100 مرة</span> سبحان الله وبحمده.</div>
+            </div>
+
+            <div id="eveningAzkar" class="azkar-content duaa-grid">
+                <div class="duaa-card" style="border-right-color:#fff;"><b>آية الكرسي</b> <span class="count-badge">مرة واحدة</span><br>أَعُوذُ بِاللهِ مِنَ الشَّيْطَانِ الرَّجِيمِ: "اللَّهُ لَا إِلَهَ إِلَّا هُوَ الْحَيُّ الْقَيُّومُ..."</div>
+                <div class="duaa-card" style="border-right-color:#fff;"><b>المعوذات</b> <span class="count-badge">3 مرات</span><br>سورة الإخلاص، الفلق، والناس.</div>
+                <div class="duaa-card">أمسينا وأمسى الملك لله، والحمد لله، لا إله إلا الله وحده لا شريك له.</div>
+                <div class="duaa-card">اللهم بك أمسينا، وبك أصبحنا، وبك نحيا، وبك نموت، وإليك المصير.</div>
+                <div class="duaa-card"><span class="count-badge">3 مرات</span> أعوذ بكلمات الله التامات من شر ما خلق.</div>
+                <div class="duaa-card"><span class="count-badge">7 مرات</span> حسبي الله لا إله إلا هو عليه توكلت وهو رب العرش العظيم.</div>
+                <div class="duaa-card"><span class="count-badge">3 مرات</span> بسم الله الذي لا يضر مع اسمه شيء في الأرض ولا في السماء وهو السميع العليم.</div>
+                <div class="duaa-card">اللهم أنت ربي لا إله إلا أنت، خلقتني وأنا عبدك، وأنا على عهدك ووعدك ما استطعت.</div>
+                <div class="duaa-card"><span class="count-badge">10 مرات</span> اللهم صلِّ وسلم على نبينا محمد.</div>
+            </div>
+        </div>
+
         <div id="duaaSection" class="content-section">
             <div class="duaa-grid">
                 <div class="duaa-card">اللهم ارحم عمي "مصطفى محمد حسن" واغفر له وعافه واعف عنه.</div>
@@ -144,51 +192,50 @@
                 <div class="duaa-card">اللهم أدخله الجنة وأعذه من عذاب القبر ومن عذاب النار.</div>
                 <div class="duaa-card">اللهم إنه في ذمتك وحبل جوارك، فقه فتنة القبر وعذاب النار.</div>
                 <div class="duaa-card">اللهم اغفر لحينا وميتنا، وشاهدنا وغائبنا، وصغيرنا وكبيرنا.</div>
-                <div class="duaa-card">اللهم من أحييته منا فأحيه على الإسلام، ومن توفيته منا فتوفه على الإيمان.</div>
                 <div class="duaa-card">اللهم لا تحرمنا أجره ولا تضلنا بعده.</div>
-                <div class="duaa-card">اللهم إنه عبدك وابن عبدك، خرج من روح الدنيا وسعتها إلى ظلمة القبر.</div>
                 <div class="duaa-card">اللهم ثبته عند السؤال.. اللهم ثبته عند السؤال.. اللهم ثبته عند السؤال.</div>
-                <div class="duaa-card">اللهم كان يشهد أنك لا إله إلا أنت وأن محمداً عبدك ورسولك وأنت أعلم به.</div>
                 <div class="duaa-card">اللهم إن كان محسناً فزد في حسناته، وإن كان مسيئاً فتجاوز عن سيئاته.</div>
-                <div class="duaa-card">اللهم آته برحمتك ورضاك، وقهِ فتنة القبر وعذابه.</div>
-                <div class="duaa-card">اللهم آته بالأمن من عذابك حتى تبعثه إلى جنتك يا أرحم الراحمين.</div>
-                <div class="duaa-card">اللهم انقله من مواطن الدود وضيق اللحود إلى جنات الخلود.</div>
-                <div class="duaa-card">اللهم ارحمه تحت الأرض، واستره يوم العرض، ولا تخزه يوم يبعثون.</div>
-                <div class="duaa-card">اللهم يمّن كتابه، ويسّر حسابه، وثقّل بالحسنات ميزانه.</div>
-                <div class="duaa-card">اللهم اجعل قبره روضة من رياض الجنة ولا تجعله حفرة من حفر النار.</div>
                 <div class="duaa-card">اللهم آنس وحدته، وآنس وحشته، وآنس غربته.</div>
-                <div class="duaa-card">اللهم اجعل عن يمينه نوراً، وعن شماله نوراً، ومن أمامه نوراً، ومن تحته نوراً.</div>
+                <div class="duaa-card">اللهم اجعل قبره روضة من رياض الجنة ولا تجعله حفرة من حفر النار.</div>
+                <div class="duaa-card">اللهم يمّن كتابه، ويسّر حسابه، وثقّل بالحسنات ميزانه.</div>
                 <div class="duaa-card">اللهم بشره بقولك "كلوا واشربوا هنيئاً بما أسلفتم في الأيام الخالية".</div>
-                <div class="duaa-card">اللهم اجعله من الذين سعدوا في الجنة خالدين فيها ما دامت السماوات والأرض.</div>
-                <div class="duaa-card">اللهم شفع فيه نبينا ومصطفاك، واحشره تحت لوائه، واسقه من يده الشريفة.</div>
                 <div class="duaa-card">اللهم ارزقه لذة النظر إلى وجهك الكريم، والشوق إلى لقائك.</div>
-                <div class="duaa-card">اللهم اكتبه عندك من الصالحين والصديقين والشهداء والأبرار.</div>
                 <div class="duaa-card">اللهم افتح له باباً من الجنة لا يسد أبداً.</div>
                 <div class="duaa-card">اللهم املأ قبره بالرضا والنور والفسحة والسرور.</div>
                 <div class="duaa-card">اللهم اجعل القرآن الكريم ربيع قلبه ونور صدره وجلاء حزنه.</div>
                 <div class="duaa-card">اللهم لَقِّهِ برحمتك الأمن من عذابك حتى تبعثه إلى جنتك.</div>
-                <div class="duaa-card">اللهم اغفر له وارحمه واعف عنه وأكرم منزله.</div>
-                <div class="duaa-card">يا رب إن رحمتك وسعت كل شيء، فارحمه رحمة تطمئن بها نفسه.</div>
-                <div class="duaa-card">اللهم جازه عن الإحسان إحساناً، وعن الإساءة عفواً وغفراناً.</div>
-                <div class="duaa-card">اللهم باعد بينه وبين خطايا كما باعدت بين المشرق والمغرب.</div>
-                <div class="duaa-card">اللهم اجعل ذريته صالحة تدعو له بخير إلى يوم الدين.</div>
                 <div class="duaa-card">اللهم ارحم من كسر قلوبنا برحيله، اللهم ارحم من اشتقنا له.</div>
-                <div class="duaa-card">اللهم اجعله ممن يقال لهم "ادخلوها بسلام آمنين".</div>
-                <div class="duaa-card">اللهم ارفع درجته في المهديين، واخلفه في عقبه في الغابرين.</div>
-                <div class="duaa-card">اللهم ارحمنا إذا صرنا إلى ما صاروا إليه.</div>
-                <div class="duaa-card">اللهم اجعل ملتقانا به في الفردوس الأعلى من الجنة.</div>
-                <div class="duaa-card">اللهم إنك عفو تحب العفو فاعف عنه.</div>
-                <div class="duaa-card">اللهم اجعل مسكنه جنات النعيم بجوار المصطفى ﷺ.</div>
-                <div class="duaa-card">اللهم ارزقه شفاعة الحبيب المصطفى ﷺ.</div>
-                <div class="duaa-card">اللهم ثبته بالقول الثابت في الحياة الدنيا وفي الآخرة.</div>
                 <div class="duaa-card">اللهم ارفع ذكره في السماء واجعل له لسان صدق في الآخرين.</div>
                 <div class="duaa-card">اللهم نور له قبره ووسع له فيه مد بصره.</div>
                 <div class="duaa-card">اللهم اجعل القرآن شفيعاً له يوم القيامة.</div>
-                <div class="duaa-card">يا رب تقبل منه القليل وتجاوز عن الكثير.</div>
-                <div class="duaa-card">اللهم ارحم غربته وارحم شيبته.</div>
+                <div class="duaa-card">اللهم اجعل ذريته صالحة تدعو له بخير إلى يوم الدين.</div>
+                <div class="duaa-card">اللهم إنك عفو تحب العفو فاعف عنه.</div>
+                <div class="duaa-card">اللهم ارحمنا إذا صرنا إلى ما صار إليه.</div>
+                <div class="duaa-card">اللهم اجعل ملتقانا به في الفردوس الأعلى من الجنة.</div>
                 <div class="duaa-card">يا حي يا قيوم برحمتك نستغيث أن ترحم فقيدنا وتغفر له.</div>
                 <div class="duaa-card">اللهم إنك غني عن عذابه فلا تعذبه وارحمه يا رحيم.</div>
                 <div class="duaa-card">اللهم اجمعنا به على حوض نبيك محمد ﷺ.</div>
+                <div class="duaa-card">اللهم بيض وجهه يوم تبيض وجوه وتسود وجوه.</div>
+                <div class="duaa-card">اللهم اكتبه عندك من الصالحين والصديقين والشهداء والأبرار.</div>
+                <div class="duaa-card">اللهم اجعل مرضه كفارة لجميع ذنوبه.</div>
+                <div class="duaa-card">اللهم ارزقه بكل حرف في القرآن حلاوة، وبكل كلمة كرامة.</div>
+                <div class="duaa-card">اللهم انظر إليه نظرة رضا، فإن من تنظر إليه نظرة رضا لا تعذبه أبداً.</div>
+                <div class="duaa-card">اللهم احشره مع المتقين إلى الرحمن وفداً.</div>
+                <div class="duaa-card">اللهم بشره بجنة عرضها السماوات والأرض.</div>
+                <div class="duaa-card">يا رب إن رحمتك وسعت كل شيء، فلتسع رحمتك عمي مصطفى.</div>
+                <div class="duaa-card">اللهم اجعله ممن يشربون من يد النبي شربة لا يظمأ بعدها أبداً.</div>
+                <div class="duaa-card">اللهم اجعل عن يمينه نوراً حتى تبعثه آمناً مطمئناً.</div>
+                <div class="duaa-card">اللهم ارحم غربته وارحم شيبته.</div>
+                <div class="duaa-card">اللهم إنه كان لكتابك تالياً وسامعاً، فشفع فيه القرآن.</div>
+                <div class="duaa-card">اللهم إنا نسألك له الفردوس الأعلى من الجنة.</div>
+                <div class="duaa-card">اللهم تقبل منه القليل وتجاوز عن التقصير.</div>
+                <div class="duaa-card">اللهم اجعل قبره مناراً يضيء له الطريق إلى الجنة.</div>
+                <div class="duaa-card">اللهم عامله بما أنت أهله، ولا تعامله بما هو أهله.</div>
+                <div class="duaa-card">اللهم آمنه من فزع يوم القيامة، واجعل نفسه آمنة مطمئنة.</div>
+                <div class="duaa-card">اللهم ارحمه فوق الأرض وتحت الأرض ويوم العرض عليك.</div>
+                <div class="duaa-card">اللهم ثبت منطقه عند السؤال، ولا تفتنه في قبره.</div>
+                <div class="duaa-card">اللهم ارزقه الجنة بلا حساب ولا سابقة عذاب.</div>
+                <div class="duaa-card">اللهم اجعل عمله هذا صدقة جارية ترفع درجته في الجنة.</div>
             </div>
         </div>
 
@@ -196,14 +243,14 @@
             <div class="sebha-box">
                 <div class="counter" id="sebhaCount">0</div>
                 <button class="sebha-btn" onclick="countSebha()">اضغط للتسبيح</button>
-                <p style="margin-top:10px; cursor:pointer; color:red;" onclick="resetSebha()">تصفير</p>
+                <p style="margin-top:10px; cursor:pointer; color:#d4af37;" onclick="resetSebha()">تصفير العداد</p>
             </div>
         </div>
     </div>
 
     <div class="player-bar" id="playerBar">
         <span id="statName"></span>
-        <button class="play-btn" style="width:auto;" onclick="stopRadio()">إيقاف</button>
+        <button class="play-btn" style="width:auto; padding: 5px 15px;" onclick="stopRadio()">إيقاف</button>
     </div>
 
     <footer>
@@ -225,6 +272,13 @@
             document.getElementById(sectionId).classList.add('active');
             evt.currentTarget.classList.add('active');
             if(sectionId !== 'radioSection') stopRadio();
+        }
+
+        function switchAzkar(evt, azkarId) {
+            document.querySelectorAll('.azkar-content').forEach(a => a.classList.remove('active'));
+            document.querySelectorAll('.sub-tab-btn').forEach(b => b.classList.remove('active'));
+            document.getElementById(azkarId).classList.add('active');
+            evt.currentTarget.classList.add('active');
         }
 
         function playRadio(url, title) {
